(lang dune 3.9)

(name aoc)

(generate_opam_files true)

(source
 (github SamuelTrew/AdventOfCode2015))

(authors "Samuel Trew")

(maintainers "Samuel Trew")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  ("aoc", "advent of code", "2015")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
